# plexos2duckdb

./: Cargo.toml  pyproject.toml
python/plexos2duckdb/: api.py
src/: cli.rs  lib.rs  main.rs
tests/: test_convert_e2e.rs
