[package]
name = "plexos2duckdb"
version = "0.1.0-beta.11"
edition = "2024"
build = "build.rs"
description = "A tool to convert PLEXOS Solution files to a DuckDB database."
license = "BSD-3-Clause"
repository = "https://github.com/epri-dev/plexos2duckdb"
homepage = "https://github.com/epri-dev/plexos2duckdb"
documentation = "https://github.com/epri-dev/plexos2duckdb"
readme = "README.md"

[dependencies]
chrono = "0.4.45"
clap = { version = "4.6.4", features = ["derive"] }
color-eyre = "0.6.5"
console = "0.16.4"
ctrlc = "3.5.2"
dateparser = "0.3.1"
duckdb = { version = "1.10505.0", features = ["bundled", "chrono", "appender-arrow"] }
indexmap = "2.14.0"
indicatif = "0.18.6"
itertools = "0.15.0"
lazy_static = "1.5.0"
owo-colors = "4.3.0"
parquet = { version = "58.2.0", default-features = false, features = ["arrow", "snap"] }
regex = "1.13.1"
roxmltree = "0.21.1"
tempfile = "3.27.0"
zip = "8.6.0"
tabled = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap_complete = "4.6.7"

[profile.release]
debug = "full"
strip = "none"

[[bin]]
name = "plexos2duckdb"
path = "src/main.rs"

[dev-dependencies]
pretty_assertions = "1.4.1"
rstest = "0.26.1"

[build-dependencies]
vergen-gitcl = { version = "9.1.0", features = [
  "build",
  "cargo",
  "rustc",
  "si",
] }


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
